--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <p><span>Great!</span><br><br>what are<br> you looking for?</p>
           <button id="button1">To Hire</button><br>
           <button id="button2">To Apply</button><br>
-          <a href="https://github.com/pankaj4455/check">back home page</a><br>
+          <a href=" https://pankaj4455.github.io/check/">back home page</a><br>
           <a href="#">I have all ready account</a>
           </div>
         
