--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
           <a href=" https://pankaj4455.github.io/check/">back home page</a><br>
           <a href="#">I have all ready account</a>
           </div>
-        
+        <script>
+            document.getElementById("button1").onclick=function(){
+                location.href=" https://pankaj4455.github.io/paginationa/";
+            </script>
         </body>
         </html>
